--- a/todo-list/index.html
+++ b/todo-list/index.html
@@ -22,7 +22,7 @@
      </form>
     <h1 class="hidden" id="greeting"></h1>
     <form id="todo-form">
-        <input type=""text placeholder="오늘 할 일은?" required/>
+        <input type=""text placeholder="오늘 할 일은? 🖍" required/>
     </form>
     <ul id="todo-list"></ul>
       <div id="quote">
